assets/css/main.css
/* ... */
.p50 { padding: 50px; }
.p100 { padding: 100px; }
.p150 { padding: 150px; }
.p200 { padding: 200px; }

.ptop5 { padding-top: 5px; }
.ptop10 { padding-top: 10px; }
.ptop15 { padding-top: 15px; }
.ptop20 { padding-top: 20px; }
.ptop25 { padding-top: 25px; }
.ptop30 { padding-top: 30px; }
.ptop40 { padding-top: 40px; }
.ptop50 { padding-top: 50px; }
.ptop0 { padding-top: 100px; }
.ptop150 { padding-top: 150px; }
.ptop200 { padding-top: 200px; }

.pbottom5 { padding-bottom: 5px; }
.pbottom10 { padding-bottom: 10px; }
.pbottom15 { padding-bottom: 15px; }
.pbottom20 { padding-bottom: 20px; }
.pbottom25 { padding-bottom: 25px; }
.pbottom30 { padding-bottom: 30px; }
.pbottom40 { padding-bottom: 40px; }
.pbottom50 { padding-bottom: 50px; }
.pbottom100 { padding-bottom: 100px; }
.pbottom150 { padding-bottom: 150px; }
.pbottom200 { padding-bottom: 200px; }

.pleft5 { padding-left: 5px; }
.pleft10 { padding-left: 10px; }
.pleft15 { padding-left: 15px; }
.pleft20 { padding-left: 20px; }
.pleft25 { padding-left: 25px; }
.pleft30 { padding-left: 30px; }
.pleft40 { padding-left: 40px; }
.pleft50 { padding-left: 50px; }
.pleft100 { padding-left: 100px; }
.pleft150 { padding-left: 150px; }
.pleft200 { padding-left: 200px; }

.pright5 { padding-right: 5px; }
.pright10 { padding-right: 10px; }
.pright15 { padding-right: 15px; }
.pright20 { padding-right: 20px; }
.pright25 { padding-right: 25px; }
.pright30 { padding-right: 30px; }
.pright40 { padding-right: 40px; }
.pright50 { padding-right: 50px; }
.pright100 { padding-right: 100px; }
.pright150 { padding-right: 150px; }
.pright200 { padding-right: 200px; }

/* width and height utils */
.w100VW { width: 100vw; }
.h100VH { height: 100vh; }

/* overflow utils */
.overflow-hidden { overflow: hidden; }

/* debug utils */
.debug1 { background-color: red; }
.debug2 { background-color: green; }
.debug3 { background-color: blue; }

/* Responsive Design */

@media (max-width: 768px) {    
    .hero-title { font-size: 2.2rem; }
    .hero-subtitle { font-size: 1.2rem; }
    .grid-min300 { grid-template-columns: 1fr; }
    .light-icon-card { height: 350px; }
    
    .services-cards-grid {
        grid-template-columns: 1fr;
    }

    .grid-2col {
        grid-template-columns: 1fr;
    }
    .hero-short {
        padding-right: 0;
        padding-left: 0;
    }
}

@media (max-width: 480px) {
    .service-card {
        height: 380px;
    }
}

